# wiew

./: Cargo.toml  README.md
crates/wiew/: Cargo.toml
crates/wiew-eframe/: Cargo.toml  README.md
crates/wiew-eframe/examples/: basic.rs
crates/wiew-eframe/examples/web/: Cargo.toml  index.html
crates/wiew-eframe/examples/web/src/: main.rs
crates/wiew-eframe/src/: lib.rs  manager.rs  present.wgsl  presentation.rs
crates/wiew/src/: camera.rs  lib.rs  pass.rs  pipelines.rs  provided.rs  render_context.rs  resource.rs  vertex_buffer.rs
crates/wiew/src/camera/: identity.rs  trackball.rs
crates/wiew/src/pipelines/: flat.rs  flat.wgsl  flat_id.wgsl  stupid_triangle.rs
crates/wiew_/src/: id.rs  lib.rs  pass.rs  pipelines.rs  render.rs  render_context.rs
crates/wiew_/src/camera/: trackball.rs
crates/wiew_/src/camera/trackball/: movement.rs
crates/wiew_/src/pipelines/: a.wgsl  flat.rs  flat.wgsl  flat_id.wgsl  stupid_triangle.wgsl
crates/wiew_/src/vertex_buffer/: instance.rs
