[package]
name = "wiew-eframe"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.28.1", default-features = false, features = ["wgpu"] }
wiew = { version = "0.1.0", path = "../wiew" }

[dev-dependencies]
eframe = "*" # <- use default features for tests (for example "default_fonts" feature)